test/admin/language/english/localisation/street.php
<?php
// Heading
$_['heading_title']           = 'Street';

// Text
$_['text_success']            = 'Success: You have modified Streets!';
$_['text_street'] 		  	  = 'Street';
$_['text_district'] 		  = 'District';
$_['text_status']			  = 'Status';
$_['text_action']			  = 'Action';

// Entry
$_['entry_name']              = 'Street Name:';
$_['entry_status']            = 'Status:';
$_['entry_district']          = 'District:';

// error
$_['error_name']              = 'Street Name must be between 3 and 128 characters!';
$_['error_permission']        = 'Warning: You do not have permission to modify Streets!';

// Column
$_['column_name']             = 'Street Name';
$_['column_action']           = 'Action';

// Error
$_['error_default']           = 'Warning: This Street cannot be deleted as it is currently assigned as the default store Street!';
$_['error_name']              = 'Street Name must be between 1 and 128 characters!';
?>